Increase header z-index to prevent map to hide header

--- a/src/domain/app/header/header.module.scss
+++ b/src/domain/app/header/header.module.scss
@@ -1,6 +1,8 @@
 @import '../../../assets/styles/breakpoints';
 
 .navigation {
+  --header-z-index: 101;
+
   z-index: var(--header-z-index);
   left: 0;
   position: sticky !important;
